--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,500,700,900" rel="stylesheet">
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
@@ -134,22 +134,13 @@
               <h3 class="visually-hidden">Панель управления</h3>
               <span class="radio-switch">
                 <label class="switch-modify" for="switch1">
-                  <span class="custom-radio-slide"></span>
-                  <div class="slider slide-image1">
-                    <p>Крем-брюле и пломбир с малиновым джемом</p>
-                  </div>
+                    <p class="slider slide-image1">Крем-брюле и пломбир с малиновым джемом</p>
                 </label>
                 <label class="switch-modify" for="switch2">
-                  <span class="custom-radio-slide"></span>
-                  <div class="slider slide-image2">
-                    <p>Шоколадный пломбир и лимонный сорбет</p>
-                  </div>
+                    <p class="slider slide-image2">Шоколадный пломбир и лимонный сорбет</p>
                 </label>
                 <label class="switch-modify" for="switch3">
-                  <span class="custom-radio-slide"></span>
-                  <div class="slider slide-image3">
-                    <p>Пломбир с помадкой и клубничный щербет</p>
-                  </div>
+                    <p class="slider slide-image3">Пломбир с помадкой и клубничный щербет</p>
                 </label>
               </span>
               <p class="control-button">
@@ -259,26 +250,26 @@
               <ul class="seo-list list-reset">
                 <li class="seo-item">
                   <p class="seo-content">
-                    Все наше мороженное изготавливается на собственном производстве,
+                    Все наше мороженое изготавливается на собственном производстве,
                     с использованием современного оборудования и проверенных временем технологий.
                   </p>
                 </li>
                 <li class="seo-item">
                   <p class="seo-content">
-                    Закупка ингридиентов производится только у проверенных фермерских хозяйств и компаний,
+                    Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний,
                     с которыми нас связывает долговременное сотрудничество.
                   </p>
                 </li>
                 <li class="seo-item">
                   <p class="seo-content">
-                    Для приготовления мороеженного используются настоящие сливки и молоко высочайшего качества.
-                    Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.
+                    Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
+                    Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
                   </p>
                 </li>
                 <li class="seo-item">
                   <p class="seo-content">
-                    Доставка нашего мороженного до заказчиков осуществляется в специальном термопаке,
-                    который не дает мороженному растаять в пути и позволяет сохранить превосходный вкус.
+                    Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
+                    который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
                   </p>
                 </li>
               </ul>
@@ -297,10 +288,11 @@
                 <div class="news-container-right">
                   <p class="news-content">
                     Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
-                    что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+                    что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды.
+                    Честно =)
                   </p>
-                  <form action="https://echo.htmlacademy.ru/" id="subscribe-form" method="GET">
-                    <input class="type-text" type="text" name="subscribe-form" placeholder="Электронная почта">
+                  <form action="https://echo.htmlacademy.ru/" id="subscribe-form" class="subscribe-form" method="GET">
+                    <input class="type-text subscribe-input" type="text" name="subscribe-form" placeholder="Электронная почта">
                     <button class="subscribe-button btn" type="submit" form="subscribe-form">Отправить</button>
                   </form>
                 </div>
@@ -309,7 +301,7 @@
         </main>
 
         <section class="address-wrap">
-          <iframe class="mapcart" src="https://yandex.ru/map-widget/v1/?um=constructor%3A62e0aa41214fe2c09736e5388233282c7286b250edd844b0e11febc20da74abd&amp;source=constructor" width="1200" height="428" frameborder="0"></iframe>
+          <iframe class="mapcart" src="https://yandex.ru/map-widget/v1/?um=constructor%3A62e0aa41214fe2c09736e5388233282c7286b250edd844b0e11febc20da74abd&amp;source=constructor" width="100%" height="428" frameborder="0"></iframe>
           <div class="address-block">
             <h3 class="visually-hidden">Наше местонахождение</h3>
             <div class="address-item">
