--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
     <title>HTML Academy: Глейси</title>
   </head>
-<body>
+<body class="body-catalog">
   <header class="header-wrap">
     <div class="header-container">
       <p class="header-logo">
