--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <ul class="hits-list list-reset">
                 <li class="hits-item">
                   <div class="catalog-item-inner">
-                    <div class="catalog-image">
+                    <div class="catalog-image hits-img">
                       <img src="img/hits-ice-cream-1.jpg" width="267" height="267" alt="Мороженное. Сливочное с апельсиновым джемом и цитрусовой стружкой.">
                       <span class="catalog-price">
                         <b class="price-val">310</b>
@@ -198,7 +198,7 @@
                 </li>
                 <li class="hits-item">
                   <div class="catalog-item-inner">
-                    <div class="catalog-image">
+                    <div class="catalog-image hits-img">
                       <img src="img/hits-ice-cream-2.jpg" width="267" height="267" alt="Мороженное. Сливочно-кофейное с кусочками шоколада.">
                       <span class="catalog-price">
                         <b class="price-val">380</b>
@@ -213,7 +213,7 @@
                 </li>
                 <li class="hits-item">
                   <div class="catalog-item-inner">
-                    <div class="catalog-image">
+                    <div class="catalog-image hits-img">
                       <img src="img/hits-ice-cream-3.jpg" width="267" height="267" alt="Мороженное. Сливочно-клубничное с присыпкой из белого шоколада.">
                       <span class="catalog-price">
                         <b class="price-val">355</b>
@@ -228,7 +228,7 @@
                 </li>
                 <li class="hits-item">
                   <div class="catalog-item-inner">
-                    <div class="catalog-image">
+                    <div class="catalog-image hits-img">
                       <img src="img/hits-ice-cream-4.jpg" width="267" height="267" alt="Мороженное. Сливочное крем-брюле с карамельной подливкой.">
                       <span class="catalog-price">
                         <b class="price-val">415</b>
