--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
         </header>
 
         <main class="main-container">
-
             <section class="control-block">
-              <h3 class="visually-hidden">Панель управления</h3>
+
+              <h3 class="visually-hidden">Панель управления слайдером</h3>
+
               <span class="radio-switch">
                 <label class="switch-modify" for="switch1">
                     <p class="slider slide-image1">Крем-брюле и пломбир с малиновым джемом</p>
