--- a/catalog.html
+++ b/catalog.html
@@ -188,11 +188,9 @@
       <ul class="breadcrumbs-list list-reset">
         <li class="breadcrumbs-item">
           <a class="links" href="index.html">Главная</a>
-          »
         </li>
         <li class="breadcrumbs-item">
           <a class="links"  href="catalog.html">Каталог</a>
-          »
         </li>
         <li class="breadcrumbs-item">
           <a href="#">Сливочное</a>
@@ -209,7 +207,7 @@
           <div class="sort-wrapper">
             <fieldset class="fieldset filter-sort">
               <legend>Сортировка:</legend>
-              <select form="filter-form" name="filter-form">
+              <select form="filter-form" name="filter-form" tabindex="0">
                 <option class="filter-value" value="popular">по популярности</option>
                 <option class="filter-value" value="price-low">сначало недорогие</option>
                 <option class="filter-value" value="price-high">сначало дорогие</option>
@@ -227,7 +225,7 @@
               <legend>Жирность:</legend>
               <p class="fatty-filter-item">
                 <label class="label-radio" for="0">
-                  <input class="input-hidden  radio-filter" type="radio" id="0" value="0" name="fatty">
+                  <input class="input-hidden  radio-filter" type="radio" id="0" value="0" name="fatty" disabled>
                   <span class="radio-value">0%</span>
                 </label>
                 <label class="label-radio" for="10">
@@ -245,28 +243,28 @@
               </p>
             </fieldset>
           </div>
-          <fieldset class="fieldset filler-filter">
+          <fieldset class="filler-filter">
             <legend>Наполнители:</legend>
             <div class="filler-wrapper">
               <p class="filler-inner-item">
-                <label class="label-chekbox">
+                <label class="label-checkbox">
                   <input class="input-hidden checkbox-filter" type="checkbox" id="chocolate" value="chocolate" name="filler" checked>
-                  <span class="checkbox-value">Шоколадные</span>
+                  <span class="checkbox-value">шоколадные</span>
                 </label>
-                <label class="label-chekbox">
+                <label class="label-checkbox">
                   <input class="input-hidden checkbox-filter" type="checkbox" id="sugar" value="sugar" name="filler" checked>
-                  <span class="checkbox-value">Сахарные присыпки</span>
+                  <span class="checkbox-value">сахарные присыпки</span>
                 </label>
-                <label class="label-chekbox">
+                <label class="label-checkbox">
                   <input class="input-hidden checkbox-filter" type="checkbox" id="fruit" value="fruit" name="filler">
                   <span class="checkbox-value">фрукты</span>
                 </label>
-                <label class="label-chekbox">
+                <label class="label-checkbox">
                   <input class="input-hidden checkbox-filter" type="checkbox" id="syrop" value="syrup" name="filler">
                   <span class="checkbox-value">сиропы</span>
                 </label>
-                <label class="label-chekbox">
-                  <input class="input-hidden checkbox-filter" type="checkbox" id="jam" value="jam" name="filler">
+                <label class="label-checkbox">
+                  <input class="input-hidden checkbox-filter" type="checkbox" id="jam" value="jam" name="filler" disabled>
                   <span class="checkbox-value">джемы</span>
                 </label>
               </p>
@@ -493,43 +491,54 @@
       <ul class="social-list list-reset">
         <li class="social-item">
           <a href="#">
-            <img src="img/twitter.svg" alt="twitter icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <path fill="#FFF" d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944 12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406 5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317 1.164.518 1.46.457-.768-.233-2.149-3.244-.974-4.781 1.984 1.79 4.075 3.482 7.804 3.643.227-2.214 1.24-3.699 3.168-4.325 1.84-.479 3.255.26 3.901 1.138.737-.224 1.453-.466 2.193-.685-.004.833-.569 1.463-.935 1.709.747.165 1.423-.475 1.423-.475-.184.963-1.094 1.725-1.707 1.954z"/>
+            </svg>
             <span class="visually-hidden">Twitter</span>
           </a>
         </li>
         <li class="social-item">
           <a href="#">
-            <img src="img/instagram.svg" alt="instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <g fill="#FFF">
+                <path d="M20.916 16a4.938 4.938 0 1 1-9.877 0c0-.394.051-.773.138-1.14h-.897v6.838h11.396V14.86h-.897c.086.367.137.746.137 1.14z"/>
+                <path d="M15.978 18.659c1.466 0 2.659-1.193 2.659-2.659s-1.193-2.659-2.659-2.659c-1.466 0-2.659 1.193-2.659 2.659s1.192 2.659 2.659 2.659zM18.637 10.302h3.039v3.039h-3.039z"/>
+                <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.955 21.698a2.285 2.285 0 0 1-2.279 2.279H10.279A2.285 2.285 0 0 1 8 21.698V10.302a2.286 2.286 0 0 1 2.279-2.279h11.396a2.286 2.286 0 0 1 2.279 2.279v11.396z"/>
+              </g>
+            </svg>
             <span class="visually-hidden">Instagram</span>
           </a>
         </li>
         <li class="social-item">
           <a href="#">
-            <img src="img/fb.svg" alt="Facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <path fill="#FFF" d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.164 16-16S24.837 0 16 0zm4.062 9.455h-3.021v3.444h3.021v3.445h-3.021v8.61H14.02v-8.61H11v-3.445h3.021V9.455c0-1.902 1.353-3.445 3.021-3.445h3.021v3.445z"/>
+            </svg>
             <span class="visually-hidden">Facebook</span>
           </a>
         </li>
         <li class="social-item">
           <a href="#">
-            <img src="img/vk.svg" alt="Vkontakte">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <g fill="#FFF">
+                <path d="M16.637 14.495c.402-.019.719-.082.951-.188.326-.145.54-.33.641-.559.101-.229.15-.496.15-.797 0-.232-.058-.465-.174-.697-.116-.232-.322-.405-.617-.517-.264-.1-.592-.155-.984-.165a76.242 76.242 0 0 0-1.652-.014h-.339v2.965h.565c.571 0 1.057-.009 1.459-.028zM18.118 17.084c-.282-.081-.672-.125-1.166-.132a127.97 127.97 0 0 0-1.55-.009h-.79v3.493h.264c1.014 0 1.74-.003 2.18-.009a3.2 3.2 0 0 0 1.212-.245c.377-.157.633-.364.774-.625s.214-.562.214-.9c0-.446-.088-.788-.261-1.03-.17-.241-.464-.423-.877-.543z"/>
+                <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm6.602 20.531a3.73 3.73 0 0 1-1.124 1.327c-.552.415-1.161.71-1.823.886s-1.501.264-2.519.264h-6.121V8.987h5.443c1.13 0 1.957.038 2.48.113a5.126 5.126 0 0 1 1.561.5c.533.27.929.632 1.189 1.087.26.455.392.975.392 1.558 0 .678-.179 1.278-.536 1.795-.358.518-.863.92-1.517 1.208v.075c.917.182 1.642.559 2.179 1.13.537.571.807 1.325.807 2.261 0 .678-.138 1.283-.411 1.817z"/>
+              </g>
+            </svg>
             <span class="visually-hidden">Vkontakte</span>
           </a>
         </li>
       </ul>
     </div>
     <nav class="footer-menu" aria-label="Дополнительная навигация по сайту.">
-      <div class="footer-menu-container">
         <a class="links fmenu-bold" href="#">Для поставщиков</a>
         <a class="links" href="#">Наши документы</a>
-      </div>
-      <div class="footer-menu-container">
         <a class="links" href="#">О производстве</a>
         <a class="links" href="#">Экологические стандарты</a>
-      </div>
     </nav>
     <div class="footer-banner">
       <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy 2017">
-      <p>Сделано в <a class="links" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>©2017</p>
+      <p>Сделано в <a class="links" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
     </div>
   </footer>
 </body>
