Переделана карта, добавлены скрипты и маркер на карту

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </main>
 
         <section class="address-wrap">
-          <iframe class="mapcart" src="https://yandex.ru/map-widget/v1/?um=constructor%3A62e0aa41214fe2c09736e5388233282c7286b250edd844b0e11febc20da74abd&amp;source=constructor"></iframe>
+          <div id="map" class="mapcart"></div>
           <div class="address-block">
             <h3 class="visually-hidden">Наше местонахождение</h3>
             <div class="address-item">
@@ -404,6 +404,8 @@
           </div>
         </section>
       </div>
+      <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+      <script src="js/script.js" type="text/javascript"></script>
     </div>
   </body>
 </html>
