допилил мелкие элементы

--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
           <ul class="menu-list list-reset">
             <li class="menu-item item-active list-reset">
               <a href="#" class="menu-link">
-                <span>Каталог</span>
+                <span class="shadow-off">Каталог</span>
               </a>
               <ul class="popup-menu-list list-reset">
                 <li class="popup-menu-item">
@@ -119,11 +119,11 @@
             <table class="shipcart-table">
               <tr class="shipcart-rows">
                 <td class="shipcart-position-remove">
-                  <button class="shipcart-btn-remove" type="submit">
+                  <a class="shipcart-btn-remove">
                     <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
                       <path fill="#231F20" d="M10.979.728l-.708-.707L5.5 4.792.729.021.021.728 4.793 5.5.021 10.271l.707.708L5.5 6.207l4.771 4.772.708-.708L6.207 5.5z"/>
                     </svg>
-                  </button>
+                  </a>
                 </td>
                 <td class="shipcart-position-img">
                   <img src="img/catalog-ice-cream-1.jpg" align="center" width="33" height="33" alt="Пломбир с апельсином и джемом">
@@ -140,11 +140,11 @@
               </tr>
               <tr class="shipcart-rows">
                 <td class="shipcart-position-remove">
-                  <button class="shipcart-btn-remove" type="submit">
+                  <a class="shipcart-btn-remove">
                     <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11">
                       <path fill="#231F20" d="M10.979.728l-.708-.707L5.5 4.792.729.021.021.728 4.793 5.5.021 10.271l.707.708L5.5 6.207l4.771 4.772.708-.708L6.207 5.5z"/>
                     </svg>
-                  </button>
+                  </a>
                 </td>
                 <td class="shipcart-position-img">
                   <img src="img/catalog-ice-cream-3.jpg" align="center" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
@@ -165,7 +165,7 @@
                 <b>Итого: 750 руб.</b>
               </span>
               <span class="rows-submit">
-                <button class="shipcart-button btn-active btn-hover" type="submit">Оформить заказ</button>
+                <a href=""class="shipcart-button btn-active btn-hover">Оформить заказ</a>
               </span>
             </div>
           </div>
@@ -290,7 +290,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+              <a href="#" class="product-name links">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -305,7 +305,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочно-кофейное с кусочками шоколада</a>
+              <a href="#" class="product-name links">Сливочно-кофейное с кусочками шоколада</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -320,7 +320,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              <a href="#" class="product-name links">Сливочно-клубничное с присыпкой из белого шоколада</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -335,7 +335,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочное крем-брюле с карамельной подливкой</a>
+              <a href="#" class="product-name links">Сливочное крем-брюле с карамельной подливкой</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -350,7 +350,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочное с брусничным джемом</a>
+              <a href="#" class="product-name links">Сливочное с брусничным джемом</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -365,7 +365,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочно-черничное с цельными ягодами черники</a>
+              <a href="#" class="product-name links">Сливочно-черничное с цельными ягодами черники</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -380,7 +380,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочно-лимонное с карамельной присыпкой</a>
+              <a href="#" class="product-name links">Сливочно-лимонное с карамельной присыпкой</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -395,7 +395,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочное с шоколадной стружкой</a>
+              <a href="#" class="product-name links">Сливочное с шоколадной стружкой</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -410,7 +410,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочно-ванильное с кусочками шоколада</a>
+              <a href="#" class="product-name links">Сливочно-ванильное с кусочками шоколада</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </a>
           </div>
@@ -425,7 +425,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочное с ментоловым сиропом</a>
+              <a href="#" class="product-name links">Сливочное с ментоловым сиропом</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
@@ -440,7 +440,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочное с кусочками черного шоколада</a>
+              <a href="#" class="product-name links">Сливочное с кусочками черного шоколада</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </a>
           </div>
@@ -455,7 +455,7 @@
               </span>
             </div>
             <div class="product-foo">
-              <a href="#" class="product-name">Сливочное с мятным сиропом</a>
+              <a href="#" class="product-name links">Сливочное с мятным сиропом</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
