--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                       </span>
                     </div>
                     <div class="product-foo">
-                        <a href="#" class="product-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                        <a href="#" class="product-name links">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                         <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                     </div>
                   </div>
@@ -207,7 +207,7 @@
                       </span>
                     </div>
                     <div class="product-foo">
-                      <a href="#" class="product-name">Сливочно-кофейное с кусочками шоколада</a>
+                      <a href="#" class="product-name links">Сливочно-кофейное с кусочками шоколада</a>
                       <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                       </span>
                     </div>
                     <div class="product-foo">
-                      <a href="#" class="product-name">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                      <a href="#" class="product-name links">Сливочно-клубничное с присыпкой из белого шоколада</a>
                       <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                     </div>
                   </div>
@@ -237,7 +237,7 @@
                       </span>
                     </div>
                     <div class="product-foo">
-                      <a href="#" class="product-name">Сливочное крем-брюле с карамельной подливкой</a>
+                      <a href="#" class="product-name links">Сливочное крем-брюле с карамельной подливкой</a>
                       <a href="#" class="catalog-invisible-button btn" >Быстрый просмотр</a>
                     </div>
                   </div>
