--- a/index.html
+++ b/index.html
@@ -378,11 +378,15 @@
             <p>Сделано в <a class="links" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
           </div>
         </footer>
-        <section>
-          <div id="callback" class="popup-callback">
+        <section class="popup-callback">
+          <div id="callback" class="popup-callback-window">
             <div class="popup-callback-inner">
               <p class="callback-button-close">
-                <button type="submit" class="button-close"></button>
+                <a class="button-close" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 18 17">
+                    <path fill="#231F20" d="M17.454 1.46L16.04.046 9 7.086 1.96.046.546 1.46l7.04 7.04-7.04 7.04 1.414 1.414L9 9.914l7.04 7.04 1.414-1.414-7.04-7.04z"/>
+                  </svg>
+                </a>
               </p>
               <h3 class="visually-hidden">Форма обратной связи</h3>
               <div class="callback-inner">
@@ -406,6 +410,9 @@
       </div>
       <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
       <script src="js/script.js" type="text/javascript"></script>
+      <script src="js/modal.js" type="text/javascript"></script>
+
+
     </div>
   </body>
 </html>
