Подгоняет пиксели к макету

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
               <h3 class="visually-hidden">Панель управления слайдером</h3>
 
               <span class="radio-switch">
-                <label class="switch-modify" for="switch1">
+                <label class="switch-modify" for="switch1" tabindex="0">
                     <p class="slider slide-image1">Крем-брюле и пломбир с малиновым джемом</p>
                 </label>
-                <label class="switch-modify" for="switch2">
+                <label class="switch-modify" for="switch2" tabindex="0">
                     <p class="slider slide-image2">Шоколадный пломбир и лимонный сорбет</p>
                 </label>
-                <label class="switch-modify" for="switch3">
+                <label class="switch-modify" for="switch3" tabindex="0">
                     <p class="slider slide-image3">Пломбир с помадкой и клубничный щербет</p>
                 </label>
               </span>
@@ -322,7 +322,7 @@
 
         </section>
 
-        <footer class="footer-wrap">
+        <footer class="footer-wrap footer-wrap-index">
           <div class="footer-social">
             <h3 class="visually-hidden">Список социальных сетей.</h3>
             <ul class="social-list list-reset">
@@ -382,7 +382,7 @@
           <div id="callback" class="popup-callback-window">
             <div class="popup-callback-inner">
               <p class="callback-button-close">
-                <a class="button-close" href="#">
+                <a class="button-close" href="#" tabindex="0">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 18 17">
                     <path fill="#231F20" d="M17.454 1.46L16.04.046 9 7.086 1.96.046.546 1.46l7.04 7.04-7.04 7.04 1.414 1.414L9 9.914l7.04 7.04 1.414-1.414-7.04-7.04z"/>
                   </svg>
