Исправление после проверки на валидность

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 
               <span class="radio-switch">
                 <label class="switch-modify" for="switch1" tabindex="0">
-                    <p class="slider slide-image1">Крем-брюле и пломбир с малиновым джемом</p>
+                    <span class="slider slide-image1">Крем-брюле и пломбир с малиновым джемом</span>
                 </label>
                 <label class="switch-modify" for="switch2" tabindex="0">
-                    <p class="slider slide-image2">Шоколадный пломбир и лимонный сорбет</p>
+                    <span class="slider slide-image2">Шоколадный пломбир и лимонный сорбет</span>
                 </label>
                 <label class="switch-modify" for="switch3" tabindex="0">
-                    <p class="slider slide-image3">Пломбир с помадкой и клубничный щербет</p>
+                    <span class="slider slide-image3">Пломбир с помадкой и клубничный щербет</span>
                 </label>
               </span>
               <p class="control-button">
@@ -408,9 +408,9 @@
           </div>
         </section>
       </div>
-      <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-      <script src="js/script.js" type="text/javascript"></script>
-      <script src="js/modal.js" type="text/javascript"></script>
+      <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+      <script src="js/script.js"></script>
+      <script src="js/modal.js"></script>
 
 
     </div>
