Правки после валидатора

--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,7 @@
                   </a>
                 </td>
                 <td class="shipcart-position-img">
-                  <img src="img/catalog-ice-cream-1.jpg" align="center" width="33" height="33" alt="Пломбир с апельсином и джемом">
+                  <img src="img/catalog-ice-cream-1.jpg" width="33" height="33" alt="Пломбир с апельсином и джемом">
                 </td>
                 <td class="shipcart-position-artical">
                   <a href="">Пломбир с апельсиновым джемом</a>
@@ -147,7 +147,7 @@
                   </a>
                 </td>
                 <td class="shipcart-position-img">
-                  <img src="img/catalog-ice-cream-3.jpg" align="center" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
+                  <img src="img/catalog-ice-cream-3.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
                 </td>
                 <td class="shipcart-position-artical">
                   <a href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
@@ -165,7 +165,7 @@
                 <b>Итого: 750 руб.</b>
               </span>
               <span class="rows-submit">
-                <a href=""class="shipcart-button btn-active btn-hover">Оформить заказ</a>
+                <a href="#" class="shipcart-button btn-active btn-hover">Оформить заказ</a>
               </span>
             </div>
           </div>
@@ -354,7 +354,7 @@
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
             </div>
           </div>
-        </li class="catalog-item">
+        </li>
         <li class="catalog-item">
           <div class="catalog-item-inner">
             <div class="catalog-image">
@@ -412,7 +412,7 @@
             <div class="product-foo">
               <a href="#" class="product-name links">Сливочно-ванильное с кусочками шоколада</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
-            </a>
+            </div>
           </div>
         </li>
         <li class="catalog-item">
@@ -442,7 +442,7 @@
             <div class="product-foo">
               <a href="#" class="product-name links">Сливочное с кусочками черного шоколада</a>
               <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
-            </a>
+            </div>
           </div>
         </li>
         <li class="catalog-item">
