Добваляет фикс ширину для textarea

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                   <input class="type-text"  type="text" id="callback-text-mail" name="callback-form" placeholder="Ваша почта для ответа?" aria-label="Введите адрес почты." required>
                 </p>
                 <p class="callback-area">
-                  <textarea class="type-text"  name="callback-form" id="callback-text-area" cols="30" rows="10" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь."></textarea>
+                  <textarea class="type-text callback-text-area"  name="callback-form" id="callback-text-area" cols="30" rows="10" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь."></textarea>
                 </p>
                   <button class="callback-submit btn" type="submit" form="callback-form">Отправить</button>
                 </form>
