--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <b class="address-number">8 812 450-25-25</b><br>
                 (c 10 до 20 ежедневно)
               </p>
-              <a href="#callback" class="callback-button btn">Форма обратной связи</a>
+              <a href="form.html" class="callback-button btn">Форма обратной связи</a>
             </div>
           </div>
         </section>
