Мелкие исправления форм для IE

--- a/catalog.html
+++ b/catalog.html
@@ -81,10 +81,10 @@
               <div class="signin-popup">
                 <form class="signin-main-form" action="https://echo.htmlacademy.ru/" id="signin-form" method="POST">
                   <span class="form-email">
-                    <input class="form-email-input" type="text" name="signin-form" id="signin-email" placeholder="Электронная почта" aria-label="Введите адрес электронной почты">
+                    <input class="input-txt" type="text" name="signin-form" id="signin-email" placeholder="Электронная почта" aria-label="Введите адрес электронной почты">
                   </span>
                   <span class="form-password">
-                    <input class="form-password-input"  type="password" name="signin-form" id="signin-password" value="" placeholder="Пароль" aria-label="Введите пароль">
+                    <input class="input-txt"  type="password" name="signin-form" id="signin-password" value="" placeholder="Пароль" aria-label="Введите пароль">
                   </span>
                   <div class="button-cont">
                     <p class="form-submit">
@@ -540,7 +540,9 @@
         <a class="links" href="#">Экологические стандарты</a>
       </nav>
       <div class="footer-banner">
-        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy 2017">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy 2017">
+        </a>
         <p>Сделано в <a class="links" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
       </div>
     </footer>
