--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
             <a class="links" href="#">Экологические стандарты</a>
           </nav>
           <div class="footer-banner">
-            <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy 2017">
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="HTML Academy 2017">
+            </a>
             <p>Сделано в <a class="links" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
           </div>
         </footer>
