--- a/index.html
+++ b/index.html
@@ -193,8 +193,10 @@
                   </div>
                   <div class="product-foo">
                     <a href="#" class="product-name links">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                    <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                   </div>
+                </div>
+                <div class="product-foo-hidden">
+                  <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                 </div>
               </li>
               <li class="hits-item">
@@ -208,8 +210,10 @@
                   </div>
                   <div class="product-foo">
                     <a href="#" class="product-name links">Сливочно-кофейное с кусочками шоколада</a>
-                    <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                   </div>
+                </div>
+                <div class="product-foo-hidden">
+                  <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                 </div>
               </li>
               <li class="hits-item">
@@ -223,8 +227,10 @@
                   </div>
                   <div class="product-foo">
                     <a href="#" class="product-name links">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                    <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                   </div>
+                </div>
+                <div class="product-foo-hidden">
+                  <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                 </div>
               </li>
               <li class="hits-item">
@@ -238,8 +244,10 @@
                   </div>
                   <div class="product-foo">
                     <a href="#" class="product-name links">Сливочное крем-брюле с карамельной подливкой</a>
-                    <a href="#" class="catalog-invisible-button btn" >Быстрый просмотр</a>
                   </div>
+                </div>
+                <div class="product-foo-hidden">
+                  <a href="#" class="catalog-invisible-button btn">Быстрый просмотр</a>
                 </div>
               </li>
             </ul>
