Изменил тип input

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                   Честно =)
                 </p>
                 <form action="https://echo.htmlacademy.ru/" id="subscribe-form" class="subscribe-form" method="GET">
-                  <input class="type-tex-t subscribe-input" type="text" name="subscribe-form" placeholder="Электронная почта">
+                  <input class="type-tex-t subscribe-input" type="email" name="subscribe-form" placeholder="Электронная почта">
                   <button class="button-reset subscribe-button btn" type="submit" form="subscribe-form">Отправить</button>
                 </form>
               </div>
